# tiny_rust_std

./: Cargo.toml  build.rs
src/: main.rs
